<resources>
    <string name="app_name">Wave</string>
    <string name="wishlist_empty">Looking empty here... \n Go favourite some albums!</string>
    <string name="cart_empty">Looking empty here... \n Go add some albums!</string>
    <string name="registerLink">Don\'t have an account? <u>Register Now!</u> </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBtn">Log In</string>
    <string name="emailHint">Jane@example.com</string>
    <string name="signOutBtn">Sign Out</string>
    <string name="purchasesTitle">Purchase History</string>
    <string name="UserGreet">Hi Someone!</string>
    <string name="registerBtn">Register</string>
    <string name="emailTitle">Email</string>
    <string name="usernameTitle">Username</string>
    <string name="passwordTitle">Password</string>
    <string name="confirmPasswordTitle">Confirm Password</string>
    <string name="home_bottom">Home</string>
    <string name="search_bottom">Search</string>
    <string name="wishlist_bottom">Wishlist</string>
    <string name="cart_bottom">Cart</string>
    <string name="profile_bottom">Profile</string>
</resources>