<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home_bottom"/>
    <item
        android:id="@+id/bottom_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search_bottom"/>
    <item
        android:id="@+id/bottom_wishlist"
        android:icon="@drawable/wishlist_selector"
        android:title="@string/wishlist_bottom"/>
    <item
        android:id="@+id/bottom_cart"
        android:icon="@drawable/cart_selector"
        android:title="@string/cart_bottom"/>
    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile_bottom"/>

</menu>