<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/off_white"
        android:elevation="0dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Register"
        app:titleCentered="true"
        app:navigationIcon="@drawable/back_icon"
        app:titleTextAppearance="@style/appBarText"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailTitle"
                style="@style/EditfieldTitle" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/emailHint"
                style="@style/EditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailField"
                android:text="@string/usernameTitle"
                style="@style/EditfieldTitle"/>

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_below="@id/emailField"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:hint="Jane"
                style="@style/EditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameField"
                android:text="@string/passwordTitle"
                style="@style/EditfieldTitle"/>

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_below="@id/usernameField"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                style="@style/EditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordField"
                android:text="@string/confirmPasswordTitle"
                style="@style/EditfieldTitle"/>

            <EditText
                android:id="@+id/passwordConfirmField"
                android:layout_width="match_parent"
                android:layout_below="@id/passwordField"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                style="@style/EditText"/>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordConfirmField"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/registerBtn"
                style="@style/defaultButton"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>