<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".Activities.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loginLayout"
        android:background="@color/off_white"
        android:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Login"
            app:titleCentered="true"
            app:navigationIcon="@drawable/back_icon"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerInParent="true"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/EditfieldTitle" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:autofillHints="emailAddress"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                style="@style/EditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailField"
                android:text="@string/password"
                style="@style/EditfieldTitle" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_below="@id/emailField"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="password"
                android:inputType="textPassword"
                style="@style/EditText"/>

            <Button
                android:id="@+id/loginButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordField"
                android:layout_marginTop="45dp"
                android:text="@string/loginBtn"/>

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButton"
                android:layout_marginTop="20dp"
                android:text="@string/registerLink"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>